// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactInfoTable renders a table of contact info 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-root"
  >
    <table
      class="PodBrowser-table  PodBrowser-table--inherits PodBrowser-table"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            colspan="1"
            role="columnheader"
          />
          <th
            colspan="1"
            role="columnheader"
          />
          <th
            colspan="1"
            role="columnheader"
          />
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      />
    </table>
  </div>
</DocumentFragment>
`;

exports[`ContactInfoTable renders an editable table of contact info 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-root"
  >
    <table
      class="PodBrowser-table  PodBrowser-table--inherits PodBrowser-table"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            colspan="1"
            role="columnheader"
          />
          <th
            colspan="1"
            role="columnheader"
          />
          <th
            colspan="1"
            role="columnheader"
          />
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      />
    </table>
  </div>
  <div
    class="PodBrowser-root PodBrowser-root"
  >
    <div
      class="PodBrowser-root PodBrowser-root"
    >
      <div
        class="PodBrowser-root"
      >
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-formControl"
        >
          <div
            aria-haspopup="listbox"
            class="PodBrowser-root PodBrowser-select PodBrowser-selectMenu PodBrowser-outlined PodBrowser-input PodBrowser-input"
            role="button"
            tabindex="0"
          >
            Home
          </div>
          <input
            aria-hidden="true"
            class="PodBrowser-nativeInput"
            tabindex="-1"
            value="http://www.w3.org/2006/vcard/ns#Home"
          />
          <svg
            aria-hidden="true"
            class="PodBrowser-root PodBrowser-icon PodBrowser-iconOutlined"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="PodBrowser-root PodBrowser-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PodBrowser-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      class="PodBrowser-root PodBrowser-root"
    >
      <input
        class="PodBrowser-input"
        label="Value"
        value=""
      />
    </div>
    <div
      class="PodBrowser-root PodBrowser-root"
    >
      <button
        class="PodBrowser-button PodBrowser-button--action"
        type="button"
      >
        Add
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`setupDeleteButtonCell renders nothing if not editable 1`] = `<DocumentFragment />`;

exports[`setupDeleteButtonCell returns a button if editable 1`] = `
<DocumentFragment>
  <button
    type="button"
  >
    Delete
  </button>
</DocumentFragment>
`;
